--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
 
     <style>
         /* --- App Shell 模式：終極防位移修正 --- */
-        
-        /* 1. 鎖死瀏覽器層級的捲動，防止 iOS 彈性拉動 (Elastic Scrolling) */
         html, body {
             margin: 0;
             padding: 0;
@@ -31,7 +29,6 @@
             touch-action: manipulation;
         }
 
-        /* 2. 建立一個內部捲動容器，所有內容都在這裡面動 */
         #root {
             width: 100%;
             height: 100%;
@@ -43,12 +40,11 @@
             flex-direction: column;
         }
 
-        /* 3. 強制輸入框字體大小 16px，防止 iPhone 自動放大造成位移 */
+        /* 強制輸入框字體大小 16px，防止 iOS 自動放大 */
         input, select, textarea {
             font-size: 16px !important; 
         }
 
-        /* 工具類 */
         .scrollbar-hide::-webkit-scrollbar { display: none; }
         .scrollbar-hide { -ms-overflow-style: none; scrollbar-width: none; }
 
@@ -64,7 +60,6 @@
         }
         .animate-slide-in { animation: slide-in 0.3s ease-out forwards; }
 
-        /* iPhone 安全區域修正 */
         .pb-safe { padding-bottom: env(safe-area-inset-bottom); }
         .pt-safe { padding-top: max(1rem, env(safe-area-inset-top)); }
     </style>
@@ -78,7 +73,7 @@
         const { 
             Trophy, Zap, CheckCircle2, Plus, Trash2, Dumbbell, BookOpen, Home, 
             TrendingUp, Lock, Unlock, Star, RefreshCw, X, Briefcase, Heart, 
-            Calendar, Clock, Repeat, Download, Filter, HardHat, Info 
+            Calendar, Clock, Repeat, Download, Filter, HardHat, Info, Settings, Upload, Save
         } = LucideReact;
 
         // --- Components ---
@@ -184,6 +179,8 @@
             const [questFilter, setQuestFilter] = React.useState('all'); 
             const [levelUpData, setLevelUpData] = React.useState(null);
             const [notification, setNotification] = React.useState(null); 
+            const [showSettings, setShowSettings] = React.useState(false); // 確保有這行
+
             const [newTask, setNewTask] = React.useState({ title: '', category: 'fitness', xp: 20, repeat: 'daily' });
             const [newReward, setNewReward] = React.useState({ title: '', reqType: 'base', levelReq: 2 });
 
@@ -200,7 +197,7 @@
                 setTimeout(() => setNotification(null), 3000);
             };
 
-            // Effects & Logic
+            // Effects
             React.useEffect(() => { localStorage.setItem('liferpg-user-v2', JSON.stringify(user)); }, [user]);
             React.useEffect(() => { localStorage.setItem('liferpg-tasks', JSON.stringify(tasks)); }, [tasks]);
             React.useEffect(() => { localStorage.setItem('liferpg-rewards-v2', JSON.stringify(rewards)); }, [rewards]);
@@ -253,9 +250,18 @@
             };
 
             const handleManualReset = () => {
-                if(window.confirm("確定重置任務為「未完成」？")) { setTasks(tasks.map(t => ({ ...t, completed: false }))); showNotification("已重置", "info"); }
+                if(window.confirm("確定要強制重置所有任務為「未完成」嗎？")) {
+                    setTasks(tasks.map(t => ({ ...t, completed: false })));
+                    showNotification("所有任務已強制重置為未完成", "info");
+                    setShowSettings(false);
+                }
             };
-            const handleDeleteTask = (id) => { setTasks(tasks.filter(t => t.id !== id)); showNotification("已刪除", "error"); };
+
+            const handleDeleteTask = (id) => {
+                setTasks(tasks.filter(t => t.id !== id));
+                showNotification("任務已刪除", "error");
+            };
+
             const handleAddTask = (e) => {
                 e.preventDefault();
                 if (!newTask.title.trim()) return;
@@ -263,6 +269,7 @@
                 setNewTask({ title: '', category: 'fitness', xp: 20, repeat: 'daily' });
                 showNotification("新增成功", "success");
             };
+
             const handleAddReward = (e) => {
                 e.preventDefault();
                 if (!newReward.title.trim()) return;
@@ -270,8 +277,50 @@
                 setNewReward(prev => ({ ...prev, title: '' }));
                 showNotification("新增獎勵", "success");
             };
+
             const handleDeleteReward = (id) => { setRewards(rewards.filter(r => r.id !== id)); };
-            const handleClearHistory = () => { if(window.confirm("清除紀錄？")) { setHistory([]); showNotification("紀錄已清除", "info"); } };
+
+            const handleClearHistory = () => {
+                if(window.confirm("確定要清除所有紀錄嗎？")) {
+                    setHistory([]);
+                    showNotification("歷史紀錄已清除", "info");
+                    setShowSettings(false);
+                }
+            };
+
+            const handleExportData = () => {
+                const data = { user, tasks, rewards, history, appState, version: "1.0" };
+                const blob = new Blob([JSON.stringify(data)], { type: "application/json" });
+                const url = URL.createObjectURL(blob);
+                const link = document.createElement('a');
+                link.href = url;
+                link.download = `liferpg_backup_${new Date().toISOString().split('T')[0]}.json`;
+                document.body.appendChild(link);
+                link.click();
+                document.body.removeChild(link);
+                showNotification("備份已下載！", "success");
+            };
+
+            const handleImportData = (e) => {
+                const file = e.target.files[0];
+                if (!file) return;
+                const reader = new FileReader();
+                reader.onload = (e) => {
+                    try {
+                        const data = JSON.parse(e.target.result);
+                        if(data.user) setUser(data.user);
+                        if(data.tasks) setTasks(data.tasks);
+                        if(data.rewards) setRewards(data.rewards);
+                        if(data.history) setHistory(data.history);
+                        if(data.appState) setAppState(data.appState);
+                        showNotification("資料還原成功！", "success");
+                        setShowSettings(false);
+                    } catch (err) {
+                        showNotification("檔案格式錯誤", "error");
+                    }
+                };
+                reader.readAsText(file);
+            };
 
             const handleImportStarterPack = () => {
                 if(!window.confirm("匯入新手包？")) return;
@@ -320,8 +369,14 @@
                     <div className="bg-slate-900 border-b border-slate-800 sticky top-0 z-30 shadow-2xl w-full pt-safe px-4 pb-4">
                         <div className="max-w-3xl mx-auto space-y-4">
                             <div className="flex items-center justify-between">
-                                <h1 className="text-2xl font-bold bg-gradient-to-r from-indigo-400 to-cyan-400 bg-clip-text text-transparent">人生 RPG</h1>
-                                <div className="text-xs text-slate-500 font-mono">完成 {user.totalTasksCompleted} 任務</div>
+                                <div>
+                                    <h1 className="text-2xl font-bold bg-gradient-to-r from-indigo-400 to-cyan-400 bg-clip-text text-transparent">人生 RPG</h1>
+                                    <div className="text-xs text-slate-500 font-mono">完成 {user.totalTasksCompleted} 任務</div>
+                                </div>
+                                {/* 齒輪按鈕 - 確保顯示 */}
+                                <button onClick={() => setShowSettings(true)} className="p-2 rounded-full bg-slate-800 text-slate-400 hover:text-white hover:bg-slate-700 transition-colors border border-slate-700">
+                                    <Settings size={20} />
+                                </button>
                             </div>
                             <div className="space-y-1">
                                 <div className="flex justify-between text-xs font-bold uppercase tracking-wider"><span className="flex items-center gap-1 text-rose-400"><Heart size={12} /> 生活 LV {user.base.level}</span><span className="text-slate-500">{user.base.xp}/{user.base.maxXp}</span></div>
@@ -358,17 +413,17 @@
                                         <div className="flex flex-col gap-3">
                                             <input type="text" placeholder="任務名稱" className="w-full bg-slate-800 border border-slate-600 rounded-lg px-4 py-3 text-white focus:border-indigo-500" value={newTask.title} onChange={(e) => setNewTask({...newTask, title: e.target.value})} />
                                             <div className="flex gap-2">
-                                                <select className="flex-1 bg-slate-800 border border-slate-600 rounded-lg px-2 py-3 text-slate-300" value={newTask.category} onChange={(e) => setNewTask({...newTask, category: e.target.value})}>
+                                                <select className="flex-1 bg-slate-800 border border-slate-600 rounded-lg px-2 py-3 text-slate-300 focus:outline-none" value={newTask.category} onChange={(e) => setNewTask({...newTask, category: e.target.value})}>
                                                     {Object.entries(categories).map(([key, val]) => <option key={key} value={key}>{val.label}</option>)}
                                                 </select>
-                                                <select className="flex-1 bg-slate-800 border border-slate-600 rounded-lg px-2 py-3 text-slate-300" value={newTask.repeat} onChange={(e) => setNewTask({...newTask, repeat: e.target.value})}>
+                                                <select className="flex-1 bg-slate-800 border border-slate-600 rounded-lg px-2 py-3 text-slate-300 focus:outline-none" value={newTask.repeat} onChange={(e) => setNewTask({...newTask, repeat: e.target.value})}>
                                                     <option value="daily">每日</option>
                                                     <option value="weekly">每週</option>
                                                     <option value="none">一次</option>
                                                 </select>
                                             </div>
                                             <div className="flex gap-2">
-                                                 <select className="flex-1 bg-slate-800 border border-slate-600 rounded-lg px-2 py-3 text-slate-300" value={newTask.xp} onChange={(e) => setNewTask({...newTask, xp: e.target.value})}>
+                                                 <select className="flex-1 bg-slate-800 border border-slate-600 rounded-lg px-2 py-3 text-slate-300 focus:outline-none" value={newTask.xp} onChange={(e) => setNewTask({...newTask, xp: e.target.value})}>
                                                     <option value="10">10 XP</option>
                                                     <option value="20">20 XP</option>
                                                     <option value="30">30 XP</option>
@@ -395,7 +450,7 @@
                                         const xpType = cat.type === 'base' ? '基礎' : '職涯';
                                         const xpColor = cat.type === 'base' ? 'text-rose-400' : 'text-cyan-400';
                                         return (
-                                            <div key={task.id} className={`relative group flex items-center justify-between p-4 rounded-xl border w-full ${task.completed ? 'bg-slate-900/50 border-slate-800 opacity-60' : `bg-slate-800 ${cat.border} shadow-lg`}`}>
+                                            <div key={task.id} className={`relative group flex items-center justify-between p-4 rounded-xl border w-full transition-all duration-300 ${task.completed ? 'bg-slate-900/50 border-slate-800 opacity-60' : `bg-slate-800 ${cat.border} shadow-lg`}`}>
                                                 <div className="flex items-center gap-4 overflow-hidden flex-1">
                                                     <button onClick={() => handleCompleteTask(task.id)} disabled={task.completed} className={`shrink-0 h-10 w-10 rounded-full flex items-center justify-center border-2 ${task.completed ? 'bg-green-500/20 border-green-500 text-green-500' : 'bg-slate-700 border-slate-600 text-slate-500'}`}>
                                                         {task.completed ? <CheckCircle2 size={20} /> : <div className="h-3 w-3 rounded-full bg-current opacity-20" />}
@@ -488,6 +543,37 @@
                             <div className="mx-auto h-20 w-20 rounded-full bg-rose-500 flex items-center justify-center animate-bounce text-white"><Heart size={40} /></div>
                             <h2 className="text-3xl font-black text-white">LV {levelUpData?.level}</h2>
                             <Button onClick={() => setLevelUpData(null)} variant="primary" className="w-full">繼續</Button>
+                        </div>
+                    </Modal>
+
+                    {/* Settings Modal - 包含備份與危險操作 */}
+                    <Modal isOpen={showSettings} onClose={() => setShowSettings(false)} title="設定與資料">
+                        <div className="space-y-4 w-full">
+                            <div className="bg-slate-900 p-4 rounded-xl space-y-3">
+                                <h4 className="text-sm font-bold text-slate-400 uppercase tracking-wider">資料備份</h4>
+                                <p className="text-xs text-slate-500">將進度存成檔案，換手機或清除快取時可還原。</p>
+                                <div className="flex gap-2">
+                                    <button onClick={handleExportData} className="flex-1 flex items-center justify-center gap-2 bg-indigo-600 hover:bg-indigo-500 text-white py-2 rounded-lg text-sm">
+                                        <Save size={16} /> 匯出
+                                    </button>
+                                    <label className="flex-1 flex items-center justify-center gap-2 bg-slate-700 hover:bg-slate-600 text-white py-2 rounded-lg text-sm cursor-pointer">
+                                        <Upload size={16} /> 匯入
+                                        <input type="file" accept=".json" className="hidden" onChange={handleImportData} />
+                                    </label>
+                                </div>
+                            </div>
+
+                            <div className="bg-slate-900 p-4 rounded-xl space-y-3">
+                                <h4 className="text-sm font-bold text-slate-400 uppercase tracking-wider">危險操作</h4>
+                                <div className="space-y-2">
+                                    <button onClick={handleManualReset} className="w-full flex items-center justify-center gap-2 bg-slate-800 border border-slate-700 hover:bg-slate-700 text-slate-300 py-2 rounded-lg text-sm">
+                                        <RefreshCw size={16} /> 重置每日任務
+                                    </button>
+                                    <button onClick={handleClearHistory} className="w-full flex items-center justify-center gap-2 bg-red-900/20 border border-red-900/50 hover:bg-red-900/30 text-red-400 py-2 rounded-lg text-sm">
+                                        <Trash2 size={16} /> 清除所有紀錄
+                                    </button>
+                                </div>
+                            </div>
                         </div>
                     </Modal>
                 </>
