--- a/index.html
+++ b/index.html
@@ -389,6 +389,43 @@
             React.useEffect(() => { localStorage.setItem('liferpg-app-state', JSON.stringify(appState)); }, [appState]);
             React.useEffect(() => { localStorage.setItem('liferpg-daily-completions', JSON.stringify(dailyCompletions)); }, [dailyCompletions]);
 
+            // 自動遷移舊資料：確保「健身/運動」有 STA 獎勵，並確保獎勵有正確價格
+            React.useEffect(() => {
+                // Task Migration
+                setTasks(prevTasks => prevTasks.map(t => {
+                    if ((t.title === "健身/運動" || t.title === "運動") && !t.stamina) {
+                        return { ...t, stamina: 34 };
+                    }
+                    return t;
+                }));
+
+                // Reward Migration (Fix 0 cost issue)
+                setRewards(prevRewards => prevRewards.map(r => {
+                    // 如果已經有合理價格(大於0)，或是不需要費用的(0元)，暫且不動。
+                    // 但如果是舊資料導致 undefined 或 0，且需要價格的，則補上。
+                    // 這裡為了保險起見，針對特定關鍵字強制更新價格
+                    let newCost = r.cost;
+                    let newCurrency = r.currency || 'zeny';
+
+                    if (!newCost || newCost === 0) {
+                        if (r.title.includes("放縱餐")) newCost = 600;
+                        else if (r.title.includes("買新遊戲")) newCost = 3000;
+                        else if (r.title.includes("聖人模式")) { newCost = 100; newCurrency = 'stamina'; }
+                        else if (r.title.includes("打電動")) newCost = 150;
+                        else if (r.title.includes("手搖飲")) newCost = 80;
+                        else if (r.title.includes("睡到自然醒")) newCost = 200;
+                        else if (r.title.includes("平價內褲")) newCost = 800;
+                        else if (r.title.includes("專櫃")) newCost = 3500;
+                        else if (r.title.includes("奢華")) newCost = 6000;
+                        else if (r.title.includes("軟裝")) newCost = 5000;
+                        else newCost = 100; // Default
+                    }
+                    
+                    return { ...r, cost: newCost, currency: newCurrency };
+                }));
+            }, []);
+
+
             // Migration & Daily Logic
             React.useEffect(() => {
                 // Migrate legacy "task.completed" to "dailyCompletions"
@@ -626,7 +663,7 @@
 
             // Import/Export
             const handleExportData = () => {
-                const data = { user, tasks, rewards, history, appState, dailyCompletions, version: "3.2" };
+                const data = { user, tasks, rewards, history, appState, dailyCompletions, version: "3.3" };
                 const blob = new Blob([JSON.stringify(data)], { type: "application/json" });
                 const url = URL.createObjectURL(blob);
                 const link = document.createElement('a');
@@ -680,7 +717,7 @@
                     { id: 3011, title: "研讀環工英文/最新法規 30分鐘", category: "knowledge", xp: 30, money: 50, repeat: 'weekly' },
                     { id: 3012, title: "預售屋家電/家具比價", category: "finance", xp: 20, money: 40, repeat: 'weekly' },
                     { id: 3013, title: "整理電腦檔案/圖資", category: "chores", xp: 20, money: 40, repeat: 'weekly' },
-                    // Updated with custom cycle logic
+                    // New tasks
                     { id: 3014, title: "丟垃圾", category: "chores", xp: 10, money: 20, repeat: 'daily' },
                     { id: 3015, title: "剪頭髮 (每3週)", category: "general", xp: 50, money: 100, repeat: 'custom', frequency: 21 },
                     { id: 3016, title: "剪指甲 (每2週)", category: "fitness", xp: 20, money: 40, repeat: 'custom', frequency: 14 }
@@ -811,12 +848,7 @@
                                         <input type="text" placeholder="新任務..." className="w-full px-2 py-1.5" value={newTask.title} onChange={(e) => setNewTask({...newTask, title: e.target.value})} />
                                         <div className="grid grid-cols-2 gap-2">
                                             <select className="px-1 py-1.5 text-xs" value={newTask.category} onChange={(e) => setNewTask({...newTask, category: e.target.value})}>{Object.entries(categories).map(([key, val]) => <option key={key} value={key}>{val.label}</option>)}</select>
-                                            <select className="px-1 py-1.5 text-xs" value={newTask.repeat} onChange={(e) => setNewTask({...newTask, repeat: e.target.value})}>
-                                                <option value="daily">每日</option>
-                                                <option value="weekly">每週</option>
-                                                <option value="custom">自定義</option>
-                                                <option value="none">一次</option>
-                                            </select>
+                                            <select className="px-1 py-1.5 text-xs" value={newTask.repeat} onChange={(e) => setNewTask({...newTask, repeat: e.target.value})}><option value="daily">每日</option><option value="weekly">每週</option><option value="custom">自定義</option><option value="none">一次</option></select>
                                         </div>
                                         
                                         {/* Custom Frequency Input */}
@@ -915,7 +947,11 @@
                                 </div>
 
                                 <div className="grid grid-cols-1 gap-2">
-                                    {rewards.sort((a,b) => (a.currency === b.currency) ? (a.cost || 0) - (b.cost || 0) : a.currency === 'stamina' ? 1 : -1).map((reward) => {
+                                    {rewards.sort((a,b) => {
+                                        // 排序邏輯：Zeny 在前，Stamina 在後，然後按價格排序
+                                        if (a.currency === b.currency) return (a.cost || 0) - (b.cost || 0);
+                                        return a.currency === 'stamina' ? 1 : -1;
+                                    }).map((reward) => {
                                         const isUnlocked = (reward.reqType === 'base' ? user.base.level : user.job.level) >= reward.levelReq;
                                         const cost = reward.cost || 0;
                                         const currency = reward.currency || 'zeny';
@@ -961,13 +997,18 @@
                                     <div className="space-y-4 relative before:absolute before:left-3 before:top-2 before:bottom-2 before:w-px before:bg-slate-600">
                                         {Object.entries(getHistoryByDate()).map(([date, entries]) => (
                                             <div key={date} className="relative pl-8">
-                                                <div className="absolute left-1.5 top-0 w-3 h-3 bg-slate-500 rounded-full border border-slate-400 transform -translate-x-1/2 z-10"></div>
+                                                <div className="absolute left-1.5 top-0 w-3 h-3 bg-slate-700 rounded-full border-2 border-slate-950 transform -translate-x-1/2 z-10"></div>
                                                 <div className="mb-2"><span className="text-[10px] font-bold text-slate-300 bg-slate-600 px-2 py-0.5 rounded">{date}</span></div>
-                                                <div className="space-y-1.5">
+                                                <div className="space-y-2">
                                                     {entries.map(entry => (
-                                                        <div key={entry.logId} className="bg-white/90 border border-slate-300 p-2 rounded flex items-center justify-between shadow-sm">
-                                                            <span className="text-xs text-slate-700 truncate pr-2">{entry.title}</span>
-                                                            <span className="text-[10px] font-bold text-blue-600 shrink-0">+{entry.xp} XP</span>
+                                                        <div key={entry.logId} className="bg-slate-900 border border-slate-800 p-2 rounded-lg flex items-center justify-between shadow-sm">
+                                                            <div className="flex items-center gap-2 overflow-hidden">
+                                                                <span className={`text-xs font-bold truncate ${entry.title.includes('兌換:') ? 'text-yellow-400' : 'text-slate-200'}`}>{entry.title}</span>
+                                                            </div>
+                                                            <div className="flex items-center gap-2 shrink-0">
+                                                                {entry.xp !== 0 && <span className={`text-[10px] font-pixel ${entry.xp > 0 ? 'text-indigo-400' : 'text-red-400'}`}>{entry.xp > 0 ? '+' : ''}{entry.xp} XP</span>}
+                                                                {entry.money !== 0 && <span className={`text-[10px] font-pixel ${entry.money > 0 ? 'text-yellow-400' : 'text-red-400'}`}>{entry.money > 0 ? '+' : ''}${entry.money} Z</span>}
+                                                            </div>
                                                         </div>
                                                     ))}
                                                 </div>
