--- a/index.html
+++ b/index.html
@@ -880,7 +880,9 @@
                     { id: 3022, title: "戴維持器 (每晚)", category: "fitness", xp: 10, money: 20, repeat: 'daily' },
                     { id: 3023, title: "吃自備低GI餐 (午)", category: "fitness", xp: 20, money: 40, repeat: 'daily' },
                     { id: 3024, title: "吃自備低GI餐 (晚)", category: "fitness", xp: 20, money: 40, repeat: 'daily' },
-                    { id: 3025, title: "摺衣服", category: "chores", xp: 20, money: 40, repeat: 'weekly' }
+                    { id: 3026, title: "吸地", category: "chores", xp: 20, money: 40, repeat: 'custom', frequency: 3 },
+                    { id: 3027, title: "拖地", category: "chores", xp: 30, money: 60, repeat: 'weekly' },
+                    { id: 3028, title: "洗遛狗背帶", category: "chores", xp: 20, money: 40, repeat: 'weekly' }
                 ], "升級包");
             };
 
